config-root/namespaces/jx-staging/nodey532/nodey532-svc.yaml
# Source: nodey532/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey532
  labels:
    chart: "nodey532-1.0.15"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nodey532-nodey532
